@@ -1,0 +1,2 @@
+Tests the way data item names from the 'cif_core_restraints.dic' dictionary
+are recognised.
