@@ -1,0 +1,134 @@
+scripts/cif_filter: tests/cases/cif_filter_193.inp data_[INVALID]_item_recognition-cif_core_retraints: WARNING, data name '_restr_torsion_atom_site_label_11' is not recognised.
+data_[VALID]_item_recognition-cif_core_retraints
+_restr_special_details           ?
+_restr_angle_atom_site_label_1   ?
+_restr_angle_atom_site_label_2   ?
+_restr_angle_atom_site_label_3   ?
+_restr_angle_details             ?
+_restr_angle_diff                ?
+_restr_angle_site_symmetry_1     ?
+_restr_angle_site_symmetry_2     ?
+_restr_angle_site_symmetry_3     ?
+_restr_angle_target              ?
+_restr_angle_target_weight_param ?
+_restr_distance_atom_site_label_1 ?
+_restr_distance_atom_site_label_2 ?
+_restr_distance_details          ?
+_restr_distance_diff             ?
+_restr_distance_site_symmetry_1  ?
+_restr_distance_site_symmetry_2  ?
+_restr_distance_target           ?
+_restr_distance_target_weight_param ?
+_restr_distance_min_A            ?
+_restr_distance_min_atom_site_label_1 ?
+_restr_distance_min_atom_site_label_2 ?
+_restr_distance_min_B            ?
+_restr_distance_min_C            ?
+_restr_distance_min_details      ?
+_restr_distance_min_difference   ?
+_restr_distance_min_distance     ?
+_restr_distance_min_E            ?
+_restr_distance_min_F            ?
+_restr_distance_min_G            ?
+_restr_distance_min_site_symmetry_1 ?
+_restr_distance_min_site_symmetry_2 ?
+_restr_equal_angle_atom_site_label_1 ?
+_restr_equal_angle_atom_site_label_2 ?
+_restr_equal_angle_atom_site_label_3 ?
+_restr_equal_angle_class_id      ?
+_restr_equal_angle_detail        ?
+_restr_equal_angle_site_symmetry_1 ?
+_restr_equal_angle_site_symmetry_2 ?
+_restr_equal_angle_site_symmetry_3 ?
+_restr_equal_angle_class_average ?
+_restr_equal_angle_class_class_id ?
+_restr_equal_angle_class_detail  ?
+_restr_equal_angle_class_diff_max ?
+_restr_equal_angle_class_esd     ?
+_restr_equal_angle_class_target_weight_param ?
+_restr_equal_distance_atom_site_label_1 ?
+_restr_equal_distance_atom_site_label_2 ?
+_restr_equal_distance_class_id   ?
+_restr_equal_distance_details    ?
+_restr_equal_distance_site_symmetry_1 ?
+_restr_equal_distance_site_symmetry_2 ?
+_restr_equal_distance_class_average ?
+_restr_equal_distance_class_class_id ?
+_restr_equal_distance_class_details ?
+_restr_equal_distance_class_diff_max ?
+_restr_equal_distance_class_esd  ?
+_restr_equal_distance_class_target_weight_param ?
+_restr_equal_torsion_atom_site_label_1 ?
+_restr_equal_torsion_atom_site_label_2 ?
+_restr_equal_torsion_atom_site_label_3 ?
+_restr_equal_torsion_atom_site_label_4 ?
+_restr_equal_torsion_class_id    ?
+_restr_equal_torsion_details     ?
+_restr_equal_torsion_site_symmetry_1 ?
+_restr_equal_torsion_site_symmetry_2 ?
+_restr_equal_torsion_site_symmetry_3 ?
+_restr_equal_torsion_site_symmetry_4 ?
+_restr_equal_torsion_class_average ?
+_restr_equal_torsion_class_class_id ?
+_restr_equal_torsion_class_details ?
+_restr_equal_torsion_class_diff_max ?
+_restr_equal_torsion_class_esd   ?
+_restr_equal_torsion_class_target_weight_param ?
+_restr_parameter_atom_coefficient ?
+_restr_parameter_atom_site_label ?
+_restr_parameter_class_id        ?
+_restr_parameter_id              ?
+_restr_parameter_class_class_id  ?
+_restr_parameter_class_details   ?
+_restr_parameter_class_parameter_type ?
+_restr_parameter_class_target    ?
+_restr_parameter_class_target_weight_param ?
+_restr_plane_atom_site_label     ?
+_restr_plane_class_id            ?
+_restr_plane_details             ?
+_restr_plane_displacement        ?
+_restr_plane_id                  ?
+_restr_plane_site_symmetry       ?
+_restr_plane_target_weight_param ?
+_restr_plane_class_class_id      ?
+_restr_plane_class_details       ?
+_restr_plane_class_displacement_esd ?
+_restr_plane_class_displacement_max ?
+_restr_plane_class_displacement_max_atom_site_label ?
+_restr_plane_class_displacement_max_site_symmetry ?
+_restr_rigid_body_id             ?
+_restr_rigid_body_class_id       ?
+_restr_rigid_body_atom_site_label ?
+_restr_rigid_body_site_symmetry  ?
+_restr_rigid_body_details        ?
+_restr_rigid_body_class_class_id ?
+_restr_rigid_body_class_details  ?
+_restr_torsion_angle_target      ?
+_restr_torsion_atom_site_label_1 ?
+_restr_torsion_atom_site_label_2 ?
+_restr_torsion_atom_site_label_3 ?
+_restr_torsion_atom_site_label_4 ?
+_restr_torsion_details           ?
+_restr_torsion_diff              ?
+_restr_torsion_site_symmetry_1   ?
+_restr_torsion_site_symmetry_2   ?
+_restr_torsion_site_symmetry_3   ?
+_restr_torsion_site_symmetry_4   ?
+_restr_torsion_weight_param      ?
+_restr_U_iso_atom_site_label     ?
+_restr_U_iso_weight_param        ?
+_restr_U_rigid_atom_site_label_1 ?
+_restr_U_rigid_atom_site_label_2 ?
+_restr_U_rigid_details           ?
+_restr_U_rigid_diff              ?
+_restr_U_rigid_site_symmetry_1   ?
+_restr_U_rigid_site_symmetry_2   ?
+_restr_U_rigid_target_weight_param ?
+_restr_U_rigid_U_parallel        ?
+_restr_U_similar_atom_site_label_1 ?
+_restr_U_similar_atom_site_label_2 ?
+_restr_U_similar_weight_param    ?
+data_[INVALID]_item_recognition-cif_core_retraints
+#BEGIN Tags that were not found in dictionaries:
+_restr_torsion_atom_site_label_11 ?
+#END Tags that were not found in dictionaries
