@@ -21,6 +21,9 @@ cod-tools (2.10)
         loop reference requires collectively unique values.
     - COD::CIF::Data::CIF2COD:
       - implemented the handling of the 'gofref' column.
+    - COD::CIF::Tags::DictTags:
+      - added data item names from the 'cif_core_restraint.dic'
+        CIF dictionary to the global '@tag_list' variable.
   * Removed:
       - the 'database-schemas/cif2cod.sql' file.
   * Fixed:
